--- a/about.html
+++ b/about.html
@@ -21,18 +21,42 @@
     </nav>
     <section>
         <h2>About Page</h2>
-        <p>The Golden Duck is a family-owned and operated Chinese restaurant located in Williamsville, New York. In addition to the regular menu, many traditional dishes are available daily.</p>
-        <P>Come visit us on Saturday or Sunday for lunch to enjoy Dim Sum and our popular Taiwanese Mongolian Bar-B-Q Buffet!
-        </p>
-        <h4>Resturant hours</h4>
-        <p>
-          Monday: Closed <br>   
-          Tuesday: 11:30 a.m. - 9 p.m.<br>
-          Thursday: 11:30 a.m. - 9 p.m.<br>
-          Friday: 11:30 a.m. - 9:30 p.m.<br>
-          Saturday: noon - 9:30 p.m.<br>
-          Sunday: noon - 9 p.m.<br>
-        </p>
+        <table border="1"> 
+            <tr>
+                <td colspan="2">
+                    Time table
+                </td>
+            </tr>   
+            <tr>
+                <td>
+                    Snack time
+                </td>
+                <td>
+                    Lunch time
+                </td>
+            </tr>
+            <tr>
+                <td>11:00Am</td>
+                <td rowspan="3">
+                    2:00Pm
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    12:00Am
+                </td>
+            </tr>
+            <tr>
+            <td>
+                1:00Am
+            </td>
+            </tr>
+            <tr>
+            <td colspan="2">
+                Change The World!
+            </td>
+            </tr>   
+        </table>
     </section>
     <footer>
         <p>All right reserved;</p>
