--- a/menu.html
+++ b/menu.html
@@ -21,18 +21,38 @@
     </nav>
     <section>
         <h2>Menu</h2>
-        <p>The Golden Duck is a family-owned and operated Chinese restaurant located in Williamsville, New York. In addition to the regular menu, many traditional dishes are available daily.</p>
-        <P>Come visit us on Saturday or Sunday for lunch to enjoy Dim Sum and our popular Taiwanese Mongolian Bar-B-Q Buffet!
-        </p>
-        <h4>Resturant hours</h4>
-        <p>
-          Monday: Closed <br>   
-          Tuesday: 11:30 a.m. - 9 p.m.<br>
-          Thursday: 11:30 a.m. - 9 p.m.<br>
-          Friday: 11:30 a.m. - 9:30 p.m.<br>
-          Saturday: noon - 9:30 p.m.<br>
-          Sunday: noon - 9 p.m.<br>
-        </p>
+        <table border="1">
+            <tr>
+                <td>No</td>
+                <td>Description</td>
+                <td>Price list</td>
+                <tr>
+                <td>1</td>
+                <td>Pizza</td>
+                <td>5000MMK</td>
+                </tr>
+                <tr>
+                <td>2</td>
+                <td>Fried Chicken</td>
+                <td>2500MMK</td>
+                </tr>
+                <tr>
+                <td>3</td>
+                <td>Ice Cream</td>
+                <td>2500MMK</td>
+                </tr>
+                <tr>
+                <td>4</td>
+                <td>Egg Fried Rice</td>
+                <td>1000MMk</td>
+                </tr>
+                <tr>
+                <td>5</td>
+                <td>Pasta</td>
+                <td>1000MMK</td>
+                </tr>
+            </tr>
+        </table>
     </section>
     <footer>
         <p>All right reserved;</p>
